@@ -1,0 +1,2 @@
+share/man/man[249] usr/share/man
+share/man/man3/sysctl.3.gz usr/share/man/man3
