@@ -4,6 +4,7 @@ freebsd-manpages (9.1-1) UNRELEASED; urgency=low
   * Rename update target to the more common name get-orig-source
   * Rework get-orig-source target to support FreeBSD releases which don't
     offer manpages for download separately.
+  * Use debian/install and dh_install instead of calling "cp" manually
 
  -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2013 00:47:15 +0200
 
